# mdbook-codeblocks

./: .gitignore  COPYING  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile
.github/workflows/: quality.yml  release.yml
example/: book.toml
example/src/: README.md  SUMMARY.md
src/: cli.rs  language.rs  main.rs  preprocessor.rs
