[package]
name = "mdbook-codeblocks"
authors = ["Roms1383"]
version = "0.1.24"
edition = "2024"
readme = "README.md"
repository = "https://github.com/Roms1383/mdbook-codeblocks"
documentation = "https://docs.rs/mdbook-codeblocks"
homepage = "https://github.com/Roms1383/mdbook-codeblocks"
license = "MIT OR Apache-2.0"
exclude = ["example.png", "justfile", "/.github/*", "/example/*"]
keywords = ["mdbook", "preprocessor"]
description = """
A mdbook preprocessor to prepend customizable vignette to code blocks.
"""

[dependencies]
anyhow = "1.0.101"
env_logger = "0.11.9"
color-name = "1.2.0"
hex_color = "3.0.0"
log = "0.4.29"
mdbook = "0.4.52"
pulldown-cmark = "0.10.3"
pulldown-cmark-to-cmark = "14.0.1"
semver = "1.0.27"
serde_json = "1.0.149"

[dependencies.clap]
version = "4.5.57"
features = ["std", "derive", "cargo", "unicode", "error-context"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[profile.dev.build-override]
debug = true
