[package]
name = "mdbook-codeblocks"
authors = ["Roms1383"]
version = "0.2.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/Roms1383/mdbook-codeblocks"
documentation = "https://docs.rs/mdbook-codeblocks"
homepage = "https://github.com/Roms1383/mdbook-codeblocks"
license = "MIT OR Apache-2.0"
exclude = ["example.png", "justfile", "/.github/*", "/example/*"]
keywords = ["mdbook", "preprocessor"]
description = """
A mdbook preprocessor to prepend customizable vignette to code blocks.
"""

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
color-name = "1.2.0"
hex_color = "3.0.0"
log = "0.4.29"
mdbook-markdown = "0.5.2"
pulldown-cmark = "0.13.3"
toml = "1.1.0"
pulldown-cmark-to-cmark = "22.0.0"
semver = "1.0.28"
serde_json = "1.0.149"
mdbook-preprocessor = "0.5.2"
mdbook-driver = "0.5.2"
mdbook-core = "0.5.2"

[dependencies.clap]
version = "4.6.0"
features = ["std", "derive", "cargo", "unicode", "error-context"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[profile.dev.build-override]
debug = true
